[package]
name = "untis"
description = "Rust library for accessing the Untis API"
repository = "https://github.com/luleyleo/untis-rs"
keywords = ["untis", "webuntis"]
categories = ["api-bindings", "data-structures"]
license = "MIT"
readme = "README.md"
version = "0.3.0"
authors = ["Leopold Luley <mail@leopoldluley.de>"]
edition = "2021"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
